<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2008 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/encode_view"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/share_view"
              android:orientation="vertical"
              android:padding="16dip">

  <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="left"
      android:textColor="@color/share_text"
      android:textSize="18.0sp"
      android:text="@string/msg_share_explanation"
      android:paddingBottom="24dip"/>

  <ImageView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:scaleType="center"
      android:src="@drawable/share_via_barcode"
      android:paddingBottom="24dip"/>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:layout_gravity="center"
      android:orientation="horizontal"
      android:gravity="center"
      android:weightSum="1"
      android:paddingBottom="8dip">

    <Button android:id="@+id/contact_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/button_share_contact"/>

    <Button android:id="@+id/bookmark_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/button_share_bookmark"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:orientation="horizontal"
      android:gravity="center"
      android:weightSum="1">

    <Button android:id="@+id/clipboard_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/button_share_clipboard"/>

    <Button android:id="@+id/app_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/button_share_app"/>

  </LinearLayout>

</LinearLayout>
